# CampusIQ-system

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: config.txt
app/agent/: agent.py  agent_middleware.py  agent_tools.py
app/api/: deps.txt
app/cache/: redis_decorator.py
app/config/: agent.yml  chroma.yaml  chroma.yml  prompts.yml  rag.yml
app/core/: background_init.py  exceptions.txt  failed_response.py  lifespan.py  logger_handler.py  rate_limit.py  security.py
app/db/: db_config.py  mysql.py  redis_client.py  redis_config.py
app/models/: chat_history.py  factory.py  note.py  note_template.py  user_model.py
app/prompt/: main_prompt.txt
app/rag/: diagnose_rag.py  rag_service.py  reorder_service.py  task_queue.py  text_spliter.py  vector_store.py
app/rag/document_handler/: processor.py
app/rag/md5_manager/: md5_store.py
app/rag/retrievers/: empty_retriever.py  hybrid_retriever.py
app/router/: auth.txt  chat.py  health.py  knowledge.py  knowledge_service.py  note.py  note_router.py  review.py  user.py
app/schemas/: auth.txt  models.py
app/services/: auth_service.py  auth_utils.py  chat_service.py  database_session_manager.py  knowledge_service.py  note_service.py  review_service.py
app/utils/: auth_utils.py  config.py  config_handler.py  factory.py  file_handler.py  image_extractor.py  logger_handler.py  path_tool.py  pdf_multimodal_loader.py  prompt_loader.py  prompt_loader.txt  vision_service.py
