[project]
name = "campusiq07"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
     "python-dotenv~=1.2.2",
     "SQLAlchemy~=2.0.48",
     "aiomysql>=0.3.2",
     "aiofiles>=25.1.0",
     "asyncio>=4.0.0",
     "redis>=7.3.0",
     "booktype>=1.5",
     "fastapi>=0.136.1",
     "langchain-community>=0.4.1",
     "langchain-core>=1.4.0",
     "uvicorn>=0.47.0",
     "python-jose>=3.5.0",
     "langchain-chroma>=1.1.0",
     "langchain-ollama>=1.1.0",
     "langchain>=1.3.1",
     "langchain-text-splitters~=1.1.1",
     "pypdf>=6.12.1",
     "unstructured[all-docs,pdf]>=0.22.20",
     "rank-bm25>=0.2.2",
     "PyYAML~=6.0.3",
     "pydantic[email]>=2.13.4",
     # "pydantic~=2.12.5",
     "langsmith>=0.7.22",
     "fitz>=0.0.1.dev2",
     "pymupdf>=1.25.0",
     "dashscope>=1.25.18",
]
