[project]
name = "campusiq07"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13,<3.14"
license = "MIT" # 表示允许的Python版本
authors = [
    { name = "chenjinyue1", email = "3344644841@qq.com" }
]
dependencies = [
     "python-dotenv~=1.2.2",
     "SQLAlchemy~=2.0.48",
     "aiomysql>=0.3.2",
     "aiofiles>=25.1.0",
     "asyncio>=4.0.0",
     "redis>=7.3.0",
     "booktype>=1.5",
     "fastapi>=0.136.1",
     "langchain-community>=0.4.1",
     "langchain-core>=1.4.0",
     "uvicorn>=0.47.0",
     "python-jose>=3.5.0",
     "langchain-chroma>=1.1.0",
     "langchain-ollama>=1.1.0",
     "langchain>=1.3.1",
     "langchain-text-splitters~=1.1.1",
     "pypdf>=6.12.1",
     "unstructured[all-docs,pdf]>=0.22.20",
     "rank-bm25>=0.2.2",
     "PyYAML~=6.0.3",
     "pydantic[email]>=2.13.4",
      "pydantic>=2.13.4",
     "langsmith>=0.7.22",
     "fitz>=0.0.1.dev2",
     "pymupdf>=1.25.0",
     "dashscope>=1.25.18",
     "sentence-transformers>=5.5.1",
     "modelscope>=1.37.1",
     "python-magic>=0.4.27",
     "python-magic-bin>=0.4.14",
     "python-multipart>=0.0.29",
     "langgraph-cli[inmem]>=0.1.54",
     "pillow>=10.0.0",
     "imagehash>=4.3.0",
     "torch>=2.11.0",
     "torchvision>=0.26.0",
     "torchaudio>=2.11.0",
     "accelerate>=1.13.0",
]

# 开发依赖
[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=24.0.0",
    "isort>=5.12.0",
    "ruff>=0.3.0",
]

#[tool.ruff]
#target-version = "py312"
#line-length = 150
#
#[tool.ruff.lint]
#select = ["E", "F", "I", "W"]
#
#[tool.ruff.lint.per-file-ignores]
#"__init__.py" = ["F401"]
#
#[tool.ruff.format]
#quote-style = "double"
#
#[tool.uv.index]
#url = "https://pypi.tuna.tsinghua.edu.cn/simple"
#default = true
#
#[tool.uv]
#venv.path = ".venv"
#index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"

